--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,4 @@
-@use './partials/variables' as *;
+@use './partials/variables'as *;
 
 $fa-font-path: "../webfonts" !default;
 
@@ -10,14 +10,32 @@ $fa-font-path: "../webfonts" !default;
 @import '~bootstrap/scss/bootstrap';
 
 #all-movies {
+    background-image: url('../img/card-right-03.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
     .container {
         background-color: aqua;
-        
+        padding: 20px;
+
 
         .card {
             width: 300px;
-            margin: 10px;
-            background-color: red;
+            background-color: #7BD983;
+            border: none;
+            box-shadow: 10px 10px 5px 0px $shadow-color;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+
+            .card-title {
+                font-size: 1.5rem;
+                font-weight: bolder;
+                color: $text-color;
+            }
         }
     }
 }
