--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -10,13 +10,13 @@ $fa-font-path: "../webfonts" !default;
 @import '~bootstrap/scss/bootstrap';
 
 #all-movies {
-    background-image: url('../img/card-right-03.webp');
+    background-image: url('../img/bg-movies.png');
     background-size: cover;
-    background-position: center;
     background-repeat: no-repeat;
+    background-position: -600px 0px;
 
     .container {
-        background-color: aqua;
+        background-color: transparent;
         padding: 20px;
 
 
@@ -28,7 +28,7 @@ $fa-font-path: "../webfonts" !default;
 
             img {
                 width: 100%;
-                height: 100%;
+                height: 400px;
             }
 
             .card-title {
