--- a/resources/scss/partials/_variables.scss
+++ b/resources/scss/partials/_variables.scss
@@ -1,4 +1,7 @@
 $text-color: black;
+$text-book:#C9B448;
+$text-movies:#6EDCCC;
+$text-books:#A01C20;
 $main-bg: #6D64A3;
 $card-bg:#7BD983;
 $shadow-color:#29715D;
